move helper lambdas to gmres lib

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gmres import GMRES"
+    "from gmres import GMRES, matmul_a, mat_to_a"
    ]
   },
   {
@@ -202,16 +202,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_to_a = lambda a    : np.squeeze(np.asarray(a))\n",
-    "matmul_a = lambda a, b : mat_to_a(np.dot(a, b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "A = np.matrix(\n",
     "    [[1, 1], \n",
     "     [3, -4]]\n",
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +230,7 @@
        "array([3, 2])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +269,7 @@
        "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-1.2058,  0.4605])"
+       "tensor([0.4125, 0.0903])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,17 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.2058,  0.4605],\n",
-       "        [-1.2058,  0.4605]])"
+       "tensor([[0.4125, 0.0903],\n",
+       "        [0.4125, 0.0903]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +497,7 @@
        "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,27 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.0010324 1.0002786]\n",
-      "4\n",
-      "retraining\n"
+      "1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.00131094, -0.00198269]),\n",
-       " array([2.00120868, 1.00054527]),\n",
-       " array([2., 1.])]"
+       "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,26 +547,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.0777142 1.0373486]\n",
-      "5\n"
+      "2\n",
+      "retraining\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.01506283,  0.0162519 ]),\n",
-       " array([2.07995765, 1.03492808]),\n",
+       "[array([3.1, 2.1]),\n",
+       " array([2.00470377, 1.35802513]),\n",
        " array([2.07142857, 1.02857143])]"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,27 +578,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.0923827 1.0594704]\n",
-      "6\n",
-      "retraining\n"
+      "[2.1054518 1.0204282]\n",
+      "3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.04814692, -0.03926635]),\n",
-       " array([2.086344  , 1.06439527]),\n",
+       "[array([ 0.07412   , -0.23464274]),\n",
+       " array([2.09010997, 1.06899609]),\n",
        " array([2.11428571, 1.08571429])]"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,26 +609,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.0680227 1.0604382]\n",
-      "7\n"
+      "[2.1019845  0.99723756]\n",
+      "4\n",
+      "retraining\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.07153912, -0.06231556]),\n",
-       " array([2.05863556, 1.06861504]),\n",
+       "[array([ 0.10077794, -0.41700325]),\n",
+       " array([2.080385 , 1.0866129]),\n",
        " array([2.1, 1.1])]"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,27 +641,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.692209  0.7989203]\n",
-      "8\n",
-      "retraining\n"
+      "[1.6538982 0.8848546]\n",
+      "5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.29112928,  0.11905408]),\n",
-       " array([1.70960084, 0.79180808]),\n",
+       "[array([-0.33875285,  0.57772374]),\n",
+       " array([1.71488159, 0.78085098]),\n",
        " array([1.54285714, 0.65714286])]"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,26 +672,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.042531   0.46768808]\n",
-      "9\n"
+      "[0.9217209  0.43391845]\n",
+      "6\n",
+      "retraining\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-1.3102191 ,  0.74315929]),\n",
-       " array([1.16234441, 0.39972965]),\n",
+       "[array([-1.15563937,  0.97051102]),\n",
+       " array([1.06966399, 0.3096752 ]),\n",
        " array([ 0.4, -0.2])]"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,27 +704,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.654543  0.9779748]\n",
-      "10\n",
-      "retraining\n"
+      "[1.9522924 1.0488316]\n",
+      "7\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.4325177 , -0.05172968]),\n",
-       " array([2.57378978, 0.96831659]),\n",
+       "[array([0.19887598, 2.338449  ]),\n",
+       " array([1.90450638, 0.48694737]),\n",
        " array([2.4, 0.8])]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,26 +735,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.1938999 1.1449088]\n",
-      "11\n"
+      "[2.1794333 1.1071111]\n",
+      "8\n",
+      "retraining\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.03880866, -0.00206447]),\n",
-       " array([2.18864775, 1.14462939]),\n",
+       "[array([ 0.01345556, -0.10985565]),\n",
+       " array([2.17639914, 1.13188333]),\n",
        " array([2.17142857, 1.12857143])]"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,27 +767,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.3756711 1.9581655]\n",
-      "12\n",
-      "retraining\n"
+      "[3.274064  1.7788451]\n",
+      "9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.13383667, -0.29435134]),\n",
-       " array([3.40482546, 2.02228555]),\n",
+       "[array([ 0.14709086, -0.7068119 ]),\n",
+       " array([3.24206087, 1.93262921]),\n",
        " array([3.25714286, 1.94285714])]"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,58 +798,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.5921319 1.5885458]\n",
-      "13\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.01932235, -0.42221236]),\n",
-       " array([2.58765065, 1.68646447]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
-     },
-     "execution_count": 352,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b10 = np.array([4.2, 1.0])\n",
-    "MLGMRES(A, b10, x0, e, nmax_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 353,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.5921319 1.5885458]\n",
-      "14\n",
+      "[2.6976917 1.3868767]\n",
+      "10\n",
       "retraining\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.01932235, -0.42221236]),\n",
-       " array([2.58765065, 1.68646447]),\n",
+       "[array([ 0.11543162, -1.54556823]),\n",
+       " array([2.67118916, 1.74173137]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,26 +830,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.54779   1.6316874]\n",
-      "15\n"
+      "[2.5951748 1.5933452]\n",
+      "11\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.02052255, -0.11662054]),\n",
-       " array([2.54326242, 1.65741595]),\n",
+       "[array([ 0.01148005, -0.41214371]),\n",
+       " array([2.59249665, 1.68949282]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b10 = np.array([4.2, 1.0])\n",
+    "MLGMRES(A, b10, x0, e, nmax_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5951748 1.5933452]\n",
+      "12\n",
+      "retraining\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 0.01148005, -0.41214371]),\n",
+       " array([2.59249665, 1.68949282]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
+     },
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
