move nn definitions to seperate lib

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gmres import GMRES, matmul_a, mat_to_a"
+    "from gmres         import GMRES, matmul_a, mat_to_a\n",
+    "from nn_collection import TwoLayerNet"
    ]
   },
   {
@@ -284,49 +285,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TwoLayerNet(torch.nn.Module):\n",
-    "    def __init__(self, D_in, H, D_out):\n",
-    "        \"\"\"\n",
-    "        In the constructor we instantiate two nn.Linear modules and assign them as\n",
-    "        member variables.\n",
-    "        \"\"\"\n",
-    "        super(TwoLayerNet, self).__init__()\n",
-    "        self.linear1 = torch.nn.Linear(D_in, H)\n",
-    "        self.linear2 = torch.nn.Linear(H, D_out)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        In the forward function we accept a Tensor of input data and we must return\n",
-    "        a Tensor of output data. We can use Modules defined in the constructor as\n",
-    "        well as arbitrary operators on Tensors.\n",
-    "        \"\"\"\n",
-    "        h_relu = self.linear1(x).clamp(min=0)\n",
-    "        y_pred = self.linear2(h_relu)\n",
-    "        return y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x=torch.empty(0, 2)\n",
     "y=torch.randn(1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.4125, 0.0903])"
+       "tensor([ 1.0296, -0.8998])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4125, 0.0903],\n",
-       "        [0.4125, 0.0903]])"
+       "tensor([[ 1.0296, -0.8998],\n",
+       "        [ 1.0296, -0.8998]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +471,7 @@
        "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +509,7 @@
        "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +540,7 @@
        " array([2.07142857, 1.02857143])]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,26 +552,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.1054518 1.0204282]\n",
+      "[2.0869133 1.0788865]\n",
       "3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.07412   , -0.23464274]),\n",
-       " array([2.09010997, 1.06899609]),\n",
+       "[array([0.03420014, 0.05480599]),\n",
+       " array([2.08159396, 1.07036215]),\n",
        " array([2.11428571, 1.08571429])]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,14 +583,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.1019845  0.99723756]\n",
+      "[2.0600462 1.086464 ]\n",
       "4\n",
       "retraining\n"
      ]
@@ -624,12 +598,12 @@
     {
      "data": {
       "text/plain": [
-       "[array([ 0.10077794, -0.41700325]),\n",
-       " array([2.080385 , 1.0866129]),\n",
+       "[array([0.05348976, 0.0657176 ]),\n",
+       " array([2.05928124, 1.08552422]),\n",
        " array([2.1, 1.1])]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,26 +615,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.6538982 0.8848546]\n",
+      "[1.6395278 0.6979246]\n",
       "5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([-0.33875285,  0.57772374]),\n",
-       " array([1.71488159, 0.78085098]),\n",
+       "[array([-0.13745241, -0.12688494]),\n",
+       " array([1.59728836, 0.65893259]),\n",
        " array([1.54285714, 0.65714286])]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,14 +646,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.9217209  0.43391845]\n",
+      "[0.66750497 0.23333526]\n",
       "6\n",
       "retraining\n"
      ]
@@ -687,12 +661,12 @@
     {
      "data": {
       "text/plain": [
-       "[array([-1.15563937,  0.97051102]),\n",
-       " array([1.06966399, 0.3096752 ]),\n",
+       "[array([-0.70084022,  0.93082613]),\n",
+       " array([0.7826312, 0.0804295]),\n",
        " array([ 0.4, -0.2])]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,26 +678,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.9522924 1.0488316]\n",
+      "[2.4751663  0.71329737]\n",
       "7\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([0.19887598, 2.338449  ]),\n",
-       " array([1.90450638, 0.48694737]),\n",
+       "[array([ 0.01153631, -0.57230949]),\n",
+       " array([2.47246848, 0.84713585]),\n",
        " array([2.4, 0.8])]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,14 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.1794333 1.1071111]\n",
+      "[2.1527495 1.14578  ]\n",
       "8\n",
       "retraining\n"
      ]
@@ -750,12 +724,12 @@
     {
      "data": {
       "text/plain": [
-       "[array([ 0.01345556, -0.10985565]),\n",
-       " array([2.17639914, 1.13188333]),\n",
+       "[array([0.00147049, 0.12487125]),\n",
+       " array([2.15240236, 1.11629863]),\n",
        " array([2.17142857, 1.12857143])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,26 +741,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.274064  1.7788451]\n",
+      "[3.101396  1.9818166]\n",
       "9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[array([ 0.14709086, -0.7068119 ]),\n",
-       " array([3.24206087, 1.93262921]),\n",
+       "[array([0.11678727, 0.62307835]),\n",
+       " array([3.07300985, 1.83037162]),\n",
        " array([3.25714286, 1.94285714])]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,14 +772,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.6976917 1.3868767]\n",
+      "[2.4420753 1.5054854]\n",
       "10\n",
       "retraining\n"
      ]
@@ -813,8 +787,39 @@
     {
      "data": {
       "text/plain": [
-       "[array([ 0.11543162, -1.54556823]),\n",
-       " array([2.67118916, 1.74173137]),\n",
+       "[array([ 0.25243933, -0.3042841 ]),\n",
+       " array([2.40235163, 1.55336729]),\n",
+       " array([2.54285714, 1.65714286])]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b10 = np.array([4.2, 1.0])\n",
+    "MLGMRES(A, b10, x0, e, nmax_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.5519283 1.5708231]\n",
+      "11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 0.07724864, -0.37249255]),\n",
+       " array([2.53511562, 1.65189364]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
@@ -837,38 +842,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.5951748 1.5933452]\n",
-      "11\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.01148005, -0.41214371]),\n",
-       " array([2.59249665, 1.68949282]),\n",
-       " array([2.54285714, 1.65714286])]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b10 = np.array([4.2, 1.0])\n",
-    "MLGMRES(A, b10, x0, e, nmax_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.5951748 1.5933452]\n",
+      "[2.5519283 1.5708231]\n",
       "12\n",
       "retraining\n"
      ]
@@ -876,12 +850,12 @@
     {
      "data": {
       "text/plain": [
-       "[array([ 0.01148005, -0.41214371]),\n",
-       " array([2.59249665, 1.68949282]),\n",
+       "[array([ 0.07724864, -0.37249255]),\n",
+       " array([2.53511562, 1.65189364]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
