move nn predictor to library

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -45,7 +45,8 @@
    "outputs": [],
    "source": [
     "from gmres         import GMRES, matmul_a, mat_to_a\n",
-    "from nn_collection import TwoLayerNet"
+    "from nn_collection import TwoLayerNet\n",
+    "from nn_predictor  import nn_preconditioner"
    ]
   },
   {
@@ -297,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 1.0296, -0.8998])"
+       "tensor([-0.6610,  0.4830])"
       ]
      },
      "execution_count": 16,
@@ -326,8 +327,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.0296, -0.8998],\n",
-       "        [ 1.0296, -0.8998]])"
+       "tensor([[-0.6610,  0.4830],\n",
+       "        [-0.6610,  0.4830]])"
       ]
      },
      "execution_count": 18,
@@ -345,124 +346,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class NNPredictor(object):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        # N is batch size; D_in is input dimension;\n",
-    "        # H is hidden dimension; D_out is output dimension.\n",
-    "        self.N, self.D_in, self.H, self.D_out = 1, 2, 100, 2\n",
-    "\n",
-    "        # Construct our model by instantiating the class defined above\n",
-    "        self.model = TwoLayerNet(self.D_in, self.H, self.D_out)\n",
-    "\n",
-    "        # Construct our loss function and an Optimizer. The call to model.parameters()\n",
-    "        # in the SGD constructor will contain the learnable parameters of the two\n",
-    "        # nn.Linear modules which are members of the model.\n",
-    "        self.criterion = torch.nn.MSELoss(reduction='sum')\n",
-    "        self.optimizer = torch.optim.SGD(self.model.parameters(), lr=1e-4)\n",
-    "\n",
-    "        self.x = torch.empty(0, self.D_in)\n",
-    "        self.y = torch.empty(0, self.D_out)\n",
-    "        self._is_trained = False\n",
-    "        # Diagnostic data => remove in production\n",
-    "        self.loss_val = list()\n",
-    "\n",
-    "    @property\n",
-    "    def is_trained(self):\n",
-    "        return self._is_trained\n",
-    "\n",
-    "    @is_trained.setter\n",
-    "    def is_trained(self, value):\n",
-    "        self._is_trained = value\n",
-    "\n",
-    "    def retrain(self):\n",
-    "        self.n_steps = 1000\n",
-    "        for t in range(self.n_steps):\n",
-    "            # Forward pass: Compute predicted y by passing x to the model\n",
-    "            y_pred = self.model(self.x)\n",
-    "\n",
-    "            # Compute and print loss\n",
-    "            loss = self.criterion(y_pred, self.y)\n",
-    "            self.loss_val.append(loss.item())\n",
-    "\n",
-    "            # Zero gradients, perform a backward pass, and update the weights.\n",
-    "            self.optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            self.optimizer.step()\n",
-    "\n",
-    "        self.is_trained = True\n",
-    "        \n",
-    "    def add(self, x, y):\n",
-    "        # TODO: don't use `torch.cat` in this incremental mode => will scale poorly\n",
-    "        # instead: use batched buffers\n",
-    "        self.x = torch.cat((self.x, torch.from_numpy(x).unsqueeze_(0).float()), 0)\n",
-    "        self.y = torch.cat((self.y, torch.from_numpy(y).unsqueeze_(0).float()), 0)\n",
-    "    \n",
-    "    def predict(self, x):\n",
-    "        return np.squeeze(\n",
-    "            self.model.forward(\n",
-    "                torch.from_numpy(x).unsqueeze_(0).float() # inputs need to be [[x_1, x_2, ...]] as floats\n",
-    "            ).detach().numpy() # outputs need to be numpy (non-grad => detach)\n",
-    "        ) # outputs need to be [y_1, y_2, ...]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import functools\n",
-    "\n",
-    "\n",
-    "def speedup_decorator(retrain_freq=10):\n",
-    "\n",
-    "    def my_decorator(func):\n",
-    "        func.predictor = NNPredictor()\n",
-    "        func.counter = 0;\n",
-    "        func.retrain_freq = retrain_freq\n",
-    "\n",
-    "        @functools.wraps(func)\n",
-    "        def speedup_wrapper(*args, **kwargs):\n",
-    "\n",
-    "            A, b, x0, e, nmax_iter, *eargs = args\n",
-    "\n",
-    "            if func.predictor.is_trained:\n",
-    "                pred_x0 = func.predictor.predict(b)\n",
-    "                print(pred_x0)\n",
-    "            else:\n",
-    "                pred_x0 = x0\n",
-    "\n",
-    "            target  = func(A, b, pred_x0, e, nmax_iter, *eargs)\n",
-    "\n",
-    "            res = target[-1]\n",
-    "\n",
-    "            func.predictor.add(b, res)\n",
-    "            func.counter += 1\n",
-    "            print(func.counter)\n",
-    "\n",
-    "            if func.counter%retrain_freq == 0:\n",
-    "                print(\"retraining\")\n",
-    "                func.predictor.retrain()\n",
-    "\n",
-    "            return target\n",
-    "\n",
-    "        return speedup_wrapper\n",
-    "    return my_decorator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "x = GMRES(A, b, x0, e, nmax_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +360,7 @@
        "[array([3, 2]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,34 +371,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@speedup_decorator(retrain_freq=2)\n",
+    "@nn_preconditioner(retrain_freq=2)\n",
     "def MLGMRES(A, b, x0, e, nmax_iter):\n",
     "    return GMRES(A, b, x0, e, nmax_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[array([3., 2.]), array([1.96153846, 1.30769231]), array([2., 1.])]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,26 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([3.1, 2.1]),\n",
-       " array([2.00470377, 1.35802513]),\n",
+       "[array([-0.01366487, -0.00338068]),\n",
+       " array([2.07546078, 1.03289111]),\n",
        " array([2.07142857, 1.02857143])]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,26 +426,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.0869133 1.0788865]\n",
-      "3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([0.03420014, 0.05480599]),\n",
-       " array([2.08159396, 1.07036215]),\n",
+       "[array([-0.00827997, -0.02476859]),\n",
+       " array([2.12451802, 1.09159515]),\n",
        " array([2.11428571, 1.08571429])]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,27 +449,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.0600462 1.086464 ]\n",
-      "4\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([0.05348976, 0.0657176 ]),\n",
-       " array([2.05928124, 1.08552422]),\n",
+       "[array([-0.00715022, -0.03624806]),\n",
+       " array([2.11100221, 1.10669727]),\n",
        " array([2.1, 1.1])]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,26 +472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.6395278 0.6979246]\n",
-      "5\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([-0.13745241, -0.12688494]),\n",
-       " array([1.59728836, 0.65893259]),\n",
+       "[array([0.03842599, 0.02569747]),\n",
+       " array([1.54230312, 0.66111444]),\n",
        " array([1.54285714, 0.65714286])]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,19 +499,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.66750497 0.23333526]\n",
-      "6\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([-0.70084022,  0.93082613]),\n",
-       " array([0.7826312, 0.0804295]),\n",
+       "[array([-1.04435279,  0.65961134]),\n",
+       " array([1.00882955, 0.27467945]),\n",
        " array([ 0.4, -0.2])]"
       ]
      },
@@ -682,18 +522,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.4751663  0.71329737]\n",
-      "7\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([ 0.01153631, -0.57230949]),\n",
-       " array([2.47246848, 0.84713585]),\n",
+       "[array([ 0.03466947, -0.18008804]),\n",
+       " array([2.39832104, 0.79886488]),\n",
        " array([2.4, 0.8])]"
       ]
      },
@@ -713,19 +545,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.1527495 1.14578  ]\n",
-      "8\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([0.00147049, 0.12487125]),\n",
-       " array([2.15240236, 1.11629863]),\n",
+       "[array([-0.00726552, -0.00399685]),\n",
+       " array([2.17139867, 1.12849978]),\n",
        " array([2.17142857, 1.12857143])]"
       ]
      },
@@ -745,18 +568,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.101396  1.9818166]\n",
-      "9\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([0.11678727, 0.62307835]),\n",
-       " array([3.07300985, 1.83037162]),\n",
+       "[array([0.03325148, 0.2628231 ]),\n",
+       " array([3.19255185, 1.90257204]),\n",
        " array([3.25714286, 1.94285714])]"
       ]
      },
@@ -776,19 +591,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.4420753 1.5054854]\n",
-      "10\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([ 0.25243933, -0.3042841 ]),\n",
-       " array([2.40235163, 1.55336729]),\n",
+       "[array([0.13401718, 0.49606419]),\n",
+       " array([2.36304477, 1.55077496]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
@@ -808,18 +614,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.5519283 1.5708231]\n",
-      "11\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([ 0.07724864, -0.37249255]),\n",
-       " array([2.53511562, 1.65189364]),\n",
+       "[array([0.05731399, 0.15517521]),\n",
+       " array([2.47458082, 1.61858252]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
@@ -839,19 +637,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2.5519283 1.5708231]\n",
-      "12\n",
-      "retraining\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[array([ 0.07724864, -0.37249255]),\n",
-       " array([2.53511562, 1.65189364]),\n",
+       "[array([0.05731399, 0.15517521]),\n",
+       " array([2.47458082, 1.61858252]),\n",
        " array([2.54285714, 1.65714286])]"
       ]
      },
